discussion/kv_engine/175089/175089_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Remove error arg from parse_config()

Change-Id: Ic6e135a801ecf776c07a04e630f0b96f438a0975

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2022-05-20 08:07:37.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-20 08:13:46.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46237/ : FAILURE

Compile error at ..\kv_engine\utilities\util_test.cc(23): fatal error C1083: Cannot open include file: "unistd.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46237/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17585/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/config_parser.h:66:23: error: no type named "string_view" in namespace "std" [clang-diagnostic-error]
int parse_config(std::string_view conf, config_item items[]);
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/config_parser.h:66:41: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
int parse_config(std::string_view conf, config_item items[]);
                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/server_core_iface.h:70:30: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
                             struct config_item items[]) = 0;
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/engine_testapp/mock_server.cc:128:30: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
                             struct config_item items[]) {
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/config_parser.cc:19:53: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
static int read_config_file(std::string_view fname, config_item items[]);
                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/config_parser.cc:75:41: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
int parse_config(std::string_view conf, config_item items[]) {
                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/config_parser.cc:227:53: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
static int read_config_file(std::string_view fname, config_item items[]) {
                                                    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17585/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/config_parser.h:66:23:
error: no type named "string_view" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17585/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38848/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/include/memcached/config_parser.h:66:23:
error: no type named "string_view" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38848/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7194/ : FAILURE

Compile error at [2022-05-20T08:09:38.198Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:88:13:
error: use of undeclared identifier "couchstore_last_os_error"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7194/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7295/ : FAILURE

Compile error at [2022-05-20T08:13:24.774Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:88:13:
error: ?couchstore_last_os_error? was not declared in this scope; did you mean ?couchstore_strerror??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7295/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19352/ : FAILURE

Compile error at [2022-05-20T08:10:02.524Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:88:13:
error: ?couchstore_last_os_error? was not declared in this scope; did you mean ?couchstore_strerror??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19352/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19699/ : FAILURE

Compile error at [2022-05-20T08:10:17.255Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:88:13:
error: ?couchstore_last_os_error? was not declared in this scope; did you mean ?couchstore_strerror??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19699/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18560/ : FAILURE

Compile error at [2022-05-20T08:11:46.408Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:88:13:
error: use of undeclared identifier "couchstore_last_os_error"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18560/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20372/ : FAILURE

Compile error at [2022-05-20T08:09:24.392Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:88:13:
error: use of undeclared identifier "couchstore_last_os_error"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20372/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27755/ : FAILURE

Compile error at [2022-05-20T08:11:34.151Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:88:13:
error: use of undeclared identifier "couchstore_last_os_error"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27755/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16608/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
